Fixed footer design issues on mobile & web view

--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -18,7 +18,9 @@ footer li {
 }
 
 footer hr {
-    width: 68%
+    width: 68%;
+    display: flex;
+    align-self: center
 }
 
 footer .media  {
